cfn_benchmark/cfn_templates/Lycheejam__cfn-vpc-peering-sample/templates/stack-security-group.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Groups stack

Parameters:
  Environment:
    Type: String
    Description: Enter prefix that should be used for tags.
    Default: development
  HomeCidr:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"

  VpcPeeringSecurityGroup:
    Type: String
    Description: Set the security group ID of the environment to which the vpc peering connection is to be made.
    Default: AWS::NoValue

Conditions:
  IsVpcPeeringConnected: !Not [!Equals [!Ref VpcPeeringSecurityGroup, AWS::NoValue]]

Resources:
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue: !Join ['-', [!Ref Environment, vpc]]
      GroupDescription: Public EC2 instances.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref HomeCidr
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment, public-sg]]

  VpcPeeringSecurityGroupIngress:
    Condition: IsVpcPeeringConnected
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Fn::ImportValue: !Ref VpcPeeringSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref PublicSecurityGroup
      FromPort: 22
      ToPort: 22

Outputs:
  PublicSecurityGroup:
    Value: !Ref PublicSecurityGroup
    Export:
      Name: !Join ['-', [!Ref Environment, public-sg]]
